tools/tree-sitter-nx/grammar.js
    source_file: ($) => seq(repeat($.import), repeat($._declaration)),

    _declaration: ($) =>
      choice(
        $.store_declaration,
        $.event_declaration,
        $.reduce_declaration,
        $.effect_declaration,
        $.component_declaration,
        $.page_declaration,
        $.routes_declaration,
        $.window_declaration,
        $.query_declaration,
      ),

    // ---------------------------------------------------------------- state

    // Store Name { field: Type = default @persist, ... }
    pattern: ($) =>
      seq(
        field('case', typeName($)),
        optional(seq('(', commaSep1(field('binding', $.identifier)), ')')),
      ),

    // ---------------------------------------------------------------- views

    // Page Name { <exactly one view node> }
    page_declaration: ($) =>
      seq('Page', field('name', typeName($)), '{', field('view', $._view_node), '}'),

    // Component Name { [props: {...}] [state: {...}] <one view node> }
    component_declaration: ($) =>
      seq(
        'Component',
        field('name', typeName($)),
        '{',
        optional($.props_block),
        optional($.state_block),
        field('view', $._view_node),
        '}',
      ),

    props_block: ($) => seq('props', ':', '{', repeat($.prop_declaration), '}'),

    prop_declaration: ($) => seq(field('name', $.identifier), ':', field('type', $.type), ','),

    // Component-local state. Not in grammar.md; see parser/decls.rs.
    _view_node: ($) => choice($.if_view, $.for_view, $.match_view, $.widget),

    // `if c { .. } else if c { .. } else { .. }`
    if_view: ($) =>
      seq(
        'if',
        field('condition', $._expression),
        field('consequence', $.view_block),
        repeat(
          seq('else', 'if', field('condition', $._expression), field('consequence', $.view_block)),
        ),
        optional(seq('else', field('alternative', $.view_block))),
      ),

    for_view: ($) =>
      seq(
        'for',
        field('binding', $.identifier),
        'in',
        field('iterable', $._expression),
        field('body', $.view_block),
      ),

    match_view: ($) =>
      seq('match', field('value', $._expression), '{', repeat1($.match_view_arm), '}'),

    match_view_arm: ($) => seq(field('pattern', $.pattern), '=>', field('body', $.view_block), ','),

    view_block: ($) => seq('{', repeat($._view_node), '}'),

    /**
     * Widget or component instantiation:
     *
     *   Divider                               -- bare
     *   Text("Hi")                            -- positional sugar
     *   Stack { gap: 2, Text("a") }           -- props and children mixed
     *   List($state.rows) { row in Text(..) } -- collection template
     *   Panel { ... }.padding(4) on Tap -> dispatch(Open)
     *
     * `prec.right` is load-bearing. Inside a parent body, a trailing
     * `on Tap -> ...` could attach either to the widget just parsed or to the
     * enclosing body (both accept handlers):
     *
     *     Stack {
     *         Button { label: "-" }.bg(surface)
     *         on Tap -> dispatch(Dec)      <- Button's, not Stack's
     *     }
     *
     * parser/view.rs resolves this greedily (`while peek == KwOn`), binding
     * the handler to the inner widget. prec.right makes the LR parser shift
     * rather than reduce, which reproduces exactly that.
     */
    widget: ($) =>
      prec.right(
        seq(
          field('name', typeName($)),
          optional(seq('(', field('positional', $._expression), ')')),
          optional(field('body', $.widget_body)),
          repeat(field('modifier', $.modifier)),
          repeat(field('handler', $.handler)),
        ),
      ),

    /**
     * One brace body covers both the prop/children block and the collection
     * template. Keeping them as a single rule is deliberate: `{ row in ... }`
     * and `{ row: expr }` only diverge on the token AFTER the identifier, so
     * one merged rule resolves with a single lookahead, whereas two competing
     * rules would need a declared LR conflict.
     */
    widget_body: ($) => seq('{', optional($.item_binding), repeat($._body_entry), '}'),

    // `row in` — the loop variable of a collection template.
    item_binding: ($) => seq(field('name', $.identifier), 'in'),

    /**
     * A body entry is a property, a handler, or a child view node.
     *
     * The handler here carries an optional `,`/`;`: parser/view.rs eats one
     * after an *inline* handler (`let _ = self.eat(&Semi) || self.eat(&Comma)`)
     * but not after the trailing handlers of a widget. So
     *
     *     Stack { on Tap -> dispatch(X); Text("a") }   <- separator allowed
     *     Stack { Button {} on Tap -> dispatch(X) }    <- binds to Button, none
     *
     * are both correct, and `prec.right` on `widget` is what routes the second
     * case into the widget instead of here.
     */
    _body_entry: ($) =>
      choice($.property, seq($.handler, optional(choice(',', ';'))), $._view_node),

    // `name: expr` with an optional `,` or `;` separator.
    property: ($) =>
      seq(
        field('name', $.identifier),
        ':',
        field('value', $._expression),
        optional(choice(',', ';')),
      ),

    // `.name(args)` — only a modifier when an argument list follows; a bare
    // `.name` is field access on an expression instead.
    modifier: ($) =>
      seq('.', field('name', $.identifier), '(', optional(field('arguments', $.arguments)), ')'),

    // `on Tap -> dispatch(Case(args))` / `-> emit(prop, args)` / `-> navigate(path)`
    handler: ($) =>
      seq('on', field('trigger', typeName($)), '->', field('action', $._handler_action)),

    _handler_action: ($) => choice($.dispatch_action, $.emit_action, $.navigate_action),

    dispatch_action: ($) =>
      seq(
        'dispatch',
        '(',
        field('case', typeName($)),
        optional(seq('(', optional(commaSep1($._expression)), ')')),
        ')',
      ),

    emit_action: ($) =>
      seq('emit', '(', field('target', $._expression), repeat(seq(',', $._expression)), ')'),

    navigate_action: ($) => seq('navigate', '(', field('path', $._expression), ')'),

    // --------------------------------------------------------------- routes

    _expression: ($) => choice($.binary_expression, $.unary_expression, $._primary_expression),

    binary_expression: ($) => {
      const table = [
        [PREC.or, '||'],
        [PREC.and, '&&'],
        [PREC.compare, choice('==', '!=', '<', '<=', '>', '>=')],
        [PREC.add, choice('+', '-')],
        [PREC.multiply, choice('*', '/', '%')],
      ];
      return choice(
        ...table.map(([precedence, operator]) =>
          prec.left(
            precedence,
            seq(
              field('left', $._expression),
              field('operator', operator),
              field('right', $._expression),
            ),
          ),
        ),
      );
    },

    state_reference: ($) =>
      seq(choice('$state', 'state'), repeat1(seq('.', field('field', $.identifier)))),

    props_reference: ($) => seq('$props', repeat1(seq('.', field('field', $.identifier)))),

    // Read-only environment: `device.profile`, ...
    device_reference: ($) => seq('device', repeat1(seq('.', field('field', $.identifier)))),

    // `svc.service.method(args)` — arguments are mandatory.
    path_expression: ($) => seq($.identifier, repeat(seq('.', field('field', $.identifier)))),

    arguments: ($) => commaSep1(choice($.named_argument, $._expression)),

    type: ($) => seq(field('name', typeName($)), optional(seq('<', commaSep1($.type), '>'))),

    // --------------------------------------------------------------- lexical

    identifier: (_) => /[a-zA-Z_][a-zA-Z0-9_]*/,

    // Line comments only.
    string_literal: ($) =>
      seq('"', repeat(choice($.escape_sequence, token.immediate(/[^"\\\n]+/))), '"'),

    integer_literal: (_) => /\d+/,

    boolean_literal: (_) => choice('true', 'false'),
  },
});

/** One or more `rule`, separated by commas. */
function commaSep1(rule) {
  return seq(rule, repeat(seq(',', rule)));
}
